# TripCraft

./: .gitignore  README.md  TripCraft面试题集-Agent开发.docx  项目设计文档.docx
.claude/skills/: fronted-design.md  superpowers.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  workflow.py
backend/app/api/: auth.py  routes.py
backend/app/core/: __init__.py  config.py
backend/app/evaluation/: __init__.py  golden_dataset.py  metrics.py  ragas_eval.py  run_evaluation.py
backend/app/models/: persistence_models.py  rag_chunk_models.py  travel.py
backend/app/services/: adjustment.py  amap.py  auth.py  cache.py  database.py  export.py  geo_optimizer.py  harness.py  hybrid_rag.py  llm.py  logging.py  memory_service.py  persistence.py  preprocess.py  rag.py  seed_data.py
backend/scripts/: force_restart.py  ingest_rag.py
backend/tests/: conftest.py  test_auth.py  test_evaluation.py  test_harness.py  test_hybrid_rag.py  test_memory_service.py  test_persistence.py  test_plan.py  test_seed_data.py  test_workflow.py
frontend/: .env.example  FRONTEND_DESIGN_SPEC.md  FRONTEND_REFACTOR_SUMMARY.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AdjustmentChat.tsx  AgentTimeline.tsx  AssistantPanel.tsx  ContextPanel.tsx  DashboardLayout.tsx  ErrorBoundary.tsx  ItineraryView.tsx  LoginPage.tsx  MapPanel.tsx  MemoryPanel.tsx  PlanningForm.tsx  PlanningScreen.tsx  RevisionHistory.tsx  TripContextPanel.tsx  (+3 more)
(+21 files in other folders)
