[project]
name = "tripcraft-backend"
version = "0.1.0"
description = "TripCraft multi-agent collaborative travel planning backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "qdrant-client>=1.11.0",
  "dashscope>=1.20.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "ragas>=0.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: 需要外部服务的集成测试 (Qdrant/PostgreSQL/DashScope)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
